# sae-feature-consistency

./: .gitignore  README.md  pyproject.toml
examples/: README.md  demo_config.py  evaluate_mcc.py  pythia-160m-ds16k.slurm  run_single.py
examples/dictionary_learning/: training_new.py  utils.py
synthetic/: README.md  generate_data.py  group_sae.ipynb  group_topksae.ipynb  models.py  utils.py
